--- a/src/app/features/auth/pages/sign-in/sign-in.component.html
+++ b/src/app/features/auth/pages/sign-in/sign-in.component.html
@@ -5,7 +5,7 @@
 
 <mat-card style="max-width: 500px;">
   <mat-card-content>
-    <app-sign-in-form></app-sign-in-form>
+    <app-sign-in-form (onSubmit)="signIn($event.username, $event.password)"></app-sign-in-form>
     <mat-divider style="margin-top: 30px;"></mat-divider>
     <div style="padding: 30px; display: flex; justify-content: center; align-items: center">
       <span>¿No tienes una cuenta?  <a style="margin-left:10px;" [routerLink]="['/auth/sign-up']"><mat-chip color="primary" highlighted>Registrate</mat-chip></a></span>
