--- a/src/app/features/auth/components/sign-in-form/sign-in-form.component.html
+++ b/src/app/features/auth/components/sign-in-form/sign-in-form.component.html
@@ -5,7 +5,7 @@
   </mat-form-field>
   <mat-form-field>
     <mat-label>Ingresa tu contraseña</mat-label>
-    <input matInput [type]="hide ? 'password' : 'text'">
+    <input matInput formControlName="password" [type]="hide ? 'password' : 'text'">
     <button
       mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
       <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
