--- a/src/app/core/layouts/global-layout/global-layout.component.css
+++ b/src/app/core/layouts/global-layout/global-layout.component.css
@@ -3,7 +3,6 @@
 }
 
 main {
-  margin: 24px;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -18,5 +17,5 @@ main {
 :host{
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
 }
