--- a/src/app/features/tools/pages/text-to-lsp/text-to-lsp.component.html
+++ b/src/app/features/tools/pages/text-to-lsp/text-to-lsp.component.html
@@ -1,1 +1,69 @@
-<p>text-to-lsp works!</p>
+<mat-card style="max-width: 1500px" class="overflow-hidden">
+  <mat-card-header style="padding: 0; padding-bottom: 10px;">
+    <div class="w-full">
+      <mat-toolbar color="primary" class="max-w-full">
+        <mat-toolbar-row class="flex justify-content-center">
+          <span>Traductor de Texto a LSP</span>
+        </mat-toolbar-row>
+      </mat-toolbar>
+      <mat-toolbar color="secondary" class="max-w-full">
+        <mat-toolbar-row class="flex justify-content-between">
+          <button mat-raised-button (click)="openAlphabetDialog()">
+            Mostrar Alfabeto
+          </button>
+          <button [routerLink]="['/tools/lsp-to-text']" mat-raised-button color="accent">
+            LSP -> Texto
+          </button>
+        </mat-toolbar-row>
+      </mat-toolbar>
+    </div>
+  </mat-card-header>
+  <mat-card-content class="flex lg:flex-column flex-column gap-2" style="height: 600px">
+    <mat-card class="flex-1">
+      <mat-card-content style="position: relative;" class="flex-1">
+        <div style="position: relative;" class="h-full">
+          <mat-form-field class="w-full h-full">
+            <mat-label>Texto a traducir</mat-label>
+            <textarea
+              matInput [(ngModel)]="textToTranslate" [ngModelOptions]="{ standalone: true }"
+              [cdkTextareaAutosize]="true"
+              [cdkAutosizeMinRows]="4"
+              [cdkAutosizeMaxRows]="12"
+              placeholder="Ej. Buenos días..."></textarea>
+          </mat-form-field>
+        </div>
+      </mat-card-content>
+    </mat-card>
+    <mat-card class="flex-1 overflow-auto">
+      <mat-card-content class="flex-1 overflow-scroll" style="background-color: azure; padding-top: 40px;">
+        <ng-container *ngIf="output; then translation; else placeholder">
+        </ng-container>
+        <ng-template #translation>
+          <div class="grid">
+            <div *ngFor="let word of words" class="col-12 md:col-6 lg:col-4 xl:col-3">
+              <mat-card class="overflow-hidden">
+                <mat-card-header style="padding: 0; padding-bottom: 10px;">
+                  <mat-toolbar class="flex justify-content-center text-3xl">
+                    {{ word.getWord }}
+                  </mat-toolbar>
+                </mat-card-header>
+                <mat-card-content class="flex justify-content-center max-h-7rem p-0">
+                  <img *ngFor="let letter of word.getData" [src]="letter.sign" alt="">
+                </mat-card-content>
+              </mat-card>
+            </div>
+          </div>
+        </ng-template>
+        <ng-template #placeholder>
+          <p style="color: #363062">
+            Ingresa tu texto a traducir y presiona el botón...
+          </p>
+        </ng-template>
+      </mat-card-content>
+      <mat-card-actions style="display: flex; gap: 5px;" class="justify-content-center">
+        <button (click)="translate()" style="min-width: 300px" mat-raised-button color="primary">Traducir</button>
+      </mat-card-actions>
+    </mat-card>
+  </mat-card-content>
+</mat-card>
+
